<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.result.ResultFragment"
    android:padding="@dimen/dimen_16dp">

    <androidx.constraintlayout.widget.Group
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_fact"
        android:visibility="gone"
        app:constraint_referenced_ids="fact_view_animation, tv_fact"/>

    <androidx.constraintlayout.widget.Group
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_fake"
        android:visibility="visible"
        app:constraint_referenced_ids="fake_view_animation, tv_fake"/>

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barrier"
        app:barrierDirection="bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:constraint_referenced_ids="fact_view_animation, tv_fact, fake_view_animation, tv_fake"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/fact_view_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="success.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tv_fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/news_identified_as_fact"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/fact_view_animation"
        app:layout_constraintStart_toStartOf="@+id/fact_view_animation"
        app:layout_constraintTop_toBottomOf="@+id/fact_view_animation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/fake_view_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="warning.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tv_fake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/news_identified_as_fake"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/fake_view_animation"
        app:layout_constraintStart_toStartOf="@+id/fake_view_animation"
        app:layout_constraintTop_toBottomOf="@+id/fake_view_animation" />

    <TextView
        android:id="@+id/title_indication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/indication"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tv_fake_indication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="90% fake" />

        <TextView
            android:id="@+id/tv_fact_indication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="90% fact" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prediction_again"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>