<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/dimen_16dp">

    <com.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/arcView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_192dp"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_arc_height="20dp"
        app:shape_arc_position="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_green_700" />

    </com.github.florent37.shapeofview.shapes.ArcView>

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/fake_news_detection"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_2dp"
        app:cardCornerRadius="@dimen/dimen_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_news"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/input_news_body"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:lines="18"
                    android:scrollHorizontally="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:text="@string/detect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/loading_view"
        layout="@layout/view_loading"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>