...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="168dp"
                android:layout_height="168dp"
                android:layout_margin="10dp"
                android:elevation="4dp"
                android:indeterminate="true"
                android:visibility="visible"
...
